add sentence on cost of emissions

--- a/FinancialDM_Intro/Introduction2.html
+++ b/FinancialDM_Intro/Introduction2.html
@@ -16,7 +16,16 @@
     <p>At the end of the study, we will calculate how much CO2 you saved compared to the maximum amount of CO2 emission possible in this study. We will only buy the amount of CO2 certificates corresponding to the amount you saved with your choice. For example, if you decide for an option with a very low CO2 emission, we will buy a high amount of CO2 certificates at the market. In contrast, if you decide for an option with a very high CO2 emission, we will almost buy no CO2 certificates.   </p>
 
     <p>All certificates we will not buy will be back on the market, eventually allowing other buyers to emit this amount of CO2. For all certificates we buy, this means we destroy the amount of carbon emission. Once the CO2 certificate is destroyed and taken off the market, it reduces the total amount of emission allowances that can be purchased. With less certificates on the market, less carbon can be emitted in total. </p>
+
+
+    <p> 
+        The monetary values of your rewards will be presented in an artificial currency with 25 study-$ equal to £1. For us to compensate 32 lbs. of CO2 through carbon certificates costs around £1. Therefore, your own rewards and the CO2 emissions in this study are of equal economic value. 
+    </p>
 </div>
 <button style="float: right; margin-top: 2vh;" class="otree-btn-next btn btn-primary"  id="consent-next">Next</button>
   
 {% endblock %}
+
+<!-- 1197 Euro = 1000 Pound. 1197 Euro = 14.644 Tonnen CO2. 
+ 1.197 euro = 14.644 kg CO2
+ 14.644kg = 32.285199154 lbs  -->
